--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>xyz.xenondevs</groupId>
-    <artifactId>Obfuscator</artifactId>
+    <artifactId>Vetric</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
