--- a/pom.xml
+++ b/pom.xml
@@ -9,11 +9,13 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <kotlin.version>1.4.21-2</kotlin.version>
+        <kotlin.version>1.4.30-RC</kotlin.version>
     </properties>
 
 
     <build>
+        <sourceDirectory>src/main/kotlin</sourceDirectory>
+        <testSourceDirectory>src/test/kotlin</testSourceDirectory>
         <plugins>
             <plugin>
                 <groupId>org.jetbrains.kotlin</groupId>
