vetric gradle plugin
logging is still missing and Vetric probably needs some refactoring to make everything classes based.

--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,7 @@
 # Eclipse Metadata
 .metadata
 
-# Gradle temporarily build directory
-*gradle
+vetric-plugin-gradle/*gradle
 
 # Eclipse Build Directory
 bin/
