--- a/vetric-core/pom.xml
+++ b/vetric-core/pom.xml
@@ -23,6 +23,12 @@
             <artifactId>gson</artifactId>
             <version>2.9.1</version>
         </dependency>
+        <!-- fastutil -->
+        <dependency>
+            <groupId>it.unimi.dsi</groupId>
+            <artifactId>fastutil</artifactId>
+            <version>8.5.8</version>
+        </dependency>
 
         <!-- CLI Dependencies -->
 
